fixed spacing list items

--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -23,6 +23,10 @@
     transform: translateY(-28px);
 }
 
+.listitem{
+    margin-bottom: 2.5px;
+}
+
 .calories{
     transform: translateY(-14px);
 }
